@@ -26,9 +26,10 @@
     <releases>
         <release version="1.4.0" date="2017-10-27">
            <description>
-               <p>Release: Indication of Savin' Stories</p>
+               <p>Release: Indication Stories</p>
                <ul>
                    <li>Show that the file is unsaved/saved.</li>
+                   <li>Show that either Focus or Dark Mode are really active on the statusbar buttons.</li>
                    <li>Show how much reading time your story has.</li>
                </ul>
            </description>
@@ -71,48 +72,6 @@
                 <p>Release: Focus pocus!</p>
                 <ul>
                     <li>The Focus Mode now has a better way of showing focus on the text</li>
-                </ul>
-            </description>
-        </release>
-        <release version="1.3.4" date="2017-10-01">
-            <description>
-                <p>Release: Count Your Words</p>
-                <ul>
-                    <li>Now you can see on the statusbar in-app how many words you have written</li>
-                </ul>
-            </description>
-        </release>
-        <release version="1.3.3" date="2017-10-01">
-            <description>
-                <p>Release: Small Style Fixes</p>
-                <ul>
-                    <li>Small styling fixes all around</li>
-                </ul>
-            </description>
-        </release>
-        <release version="1.3.2" date="2017-09-30">
-            <description>
-                <p>Release: Correct &amp; Undo/Redo All You Want</p>
-                <ul>
-                    <li>Undoing and Redoing now work properly</li>
-                    <li>You can now set spellchecking as enabled or not in the Settings</li>
-                </ul>
-            </description>
-        </release>
-        <release version="1.3.1" date="2017-09-29">
-            <description>
-                <p>Release: Now Make It Fly</p>
-                <ul>
-                    <li>Small fixes all around to make Quilter work better</li>
-                    <li>You can now make Markdown Tables with style</li>
-                </ul>
-            </description>
-        </release>
-        <release version="1.3.0" date="2017-09-27">
-            <description>
-                <p>Release: Preview Your Story</p>
-                <ul>
-                    <li>All-new Preview Mode that shows your file</li>
                 </ul>
             </description>
         </release>
